# api/src/routes/users.js
@@ -3,7 +3,7 @@ const router = express.Router();
 const { listUsers, studentDetail, instructorDetail, getStreak, getBestStreak } = require('../controllers/user.controller');
 const { authMiddleware, requireRole } = require('../middleware/auth');
 
-router.get('/', authMiddleware, listUsers); // query ?role=student/instructor/admin
+router.get('/', authMiddleware, requireRole('admin') , listUsers); // query ?role=student/instructor/admin
 router.get('/me/streak', authMiddleware, requireRole('student'), getStreak);
 router.get('/me/streak/best', authMiddleware, requireRole('student'), getBestStreak);
 router.get('/students/:id', authMiddleware, studentDetail);
